// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/environment.vue { locale: en } snapshot test renders correctly 1`] = `
<section
  class="section"
>
  <h2
    class="title is-3 has-text-grey"
  >
    
    Client-side Environments
  
  </h2>
   
  <ul>
    <li>
      <b>
        basePath
      </b>
      
      : foo
    
    </li>
  </ul>
</section>
`;

exports[`pages/environment.vue { locale: ja } snapshot test renders correctly 1`] = `
<section
  class="section"
>
  <h2
    class="title is-3 has-text-grey"
  >
    
    クライアントサイド 環境変数
  
  </h2>
   
  <ul>
    <li>
      <b>
        basePath
      </b>
      
      : foo
    
    </li>
  </ul>
</section>
`;
